--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Danulab Blog by Dan Mbanga
 description: Everything is Opslife!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://s3.amazonaws.com/danulab.com/blog/imgs/danu_face.jpg
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email: dan@danulab.com
   facebook:
   flickr:
-  github: danromuald/danromuald.github.io
+  github: danromuald
   instagram:
   linkedin:
   pinterest:
