--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Danulab Dan R. banga
+name: Danulab by Dan R. banga
 
 # Short bio or description (displayed in the header)
 description: Everything is Opslife!
